changes to notebook, moving sitely pages and archive

--- a/doqmeat/faq/index.html
+++ b/doqmeat/faq/index.html
@@ -28,13 +28,13 @@
       <li><u>JS</u> stands for <i>JavaScript</i>. this is what makes a webpage interactable! once you are VERY comfortable with HTML and CSS, i recommend looking up JS tutorials. but for now, you can just ignore this one!</li>
     </ul>
 
-    <p class="a">i basically got the hang of <u>HTML</u> and <u>CSS</u> as i was actively working on my site. when i started my site, i had no clue how HTML or CSS worked but that was the most exciting part. i used <a href="/notebook/links/index.html#layouts">free templates</a> and googled every little thing that i didn't know about! using templates and messing around with them made it wayy easier to eventually understand what each little thing does. i def recommend using free HTML templates if you have 0 clue of what you're doing!</p>
+    <p class="a">i basically got the hang of <u>HTML</u> and <u>CSS</u> as i was actively working on my site. when i started my site, i had no clue how HTML or CSS worked but that was the most exciting part. i used <a href="/notebook/resources/index.html#layouts">free templates</a> and googled every little thing that i didn't know about! using templates and messing around with them made it wayy easier to eventually understand what each little thing does. i def recommend using free HTML templates if you have 0 clue of what you're doing!</p>
 
-    <p class="a">i also recommend looking into different <a href="/notebook/links/index.html#editor">code editors</a> and seeing which ones you like the best! that way you can mess around and build your code offline before putting it live on your site.</p>
+    <p class="a">i also recommend looking into different <a href="/notebook/resources/index.html#editor">code editors</a> and seeing which ones you like the best! that way you can mess around and build your code offline before putting it live on your site.</p>
 
     <p class="a">while googling things will usually get you want you want, i also spent a lot of time on sites that have a lot of documentation when it comes to building websites and their languages such as <a href="https://www.w3schools.com/" target="_blank">w3schools.com</a>, <a href="https://www.htmldog.com/" target="_blank">htmldog.com</a> and <a href="https://developer.mozilla.org/en-US/" target="_blank">developer.mozilla</a>.</p>
 
-    <p>if you need more help, i have a <a href="/notebook/links/index.html">links</a> page where i link a ton of resources that i use. it might be overwhelming at first but once you get the hang of it, it won't be that hard. remember to have fun along the way! it will make the learning experience way more rewarding and less of a struggle.</p>
+    <p>if you need more help, i have a <a href="/notebook/resources/index.html">links</a> page where i link a ton of resources that i use. it might be overwhelming at first but once you get the hang of it, it won't be that hard. remember to have fun along the way! it will make the learning experience way more rewarding and less of a struggle.</p>
 
 
     <p id="1" class="q">what should i put on my personal website?</p>
