--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -95,7 +95,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 			<h3>sitely</h3>
 			<a class="s" href="sitemap.html">sitemap</a>
 			<a class="s" href="/sites">button wall</a>
-			<a class="s" title="contains links, resources, F2U stuff, archives, etc!" href="/notebook">notebook</a>
+			<a class="s" href="/notebook">resources</a>
 			<a class="s outlink" href="https://doqmeat.atabook.org/">guestbook</a>
 			<a class="s outlink" href="https://neocities.org/site/doqmeat" target="_blank">neocities profile</a>
 			<a class="s outlink" title="github repository" href="https://github.com/doqmeat/doqmeat.com" target="_blank">source code</a>
@@ -319,7 +319,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 		</aside>
 		<footer class="box">
 			<p><img title="doqmeat.com protected by nyan cat" src="!g/pix/nyancat.gif" alt="nyan cat"></p>
-			<p><a href="/notebook/links/credit.html#home">credit</a> for materials used / coded with <img title="LOVE!" src="!g/pix/heart-paper.gif" alt="love"> by <b>des</b> / on the web since <b>11.apr.23</b> / <a title="e-mail me!" href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">e-mail</a></p>
+			<p><a href="/info/credit.html#home">credit</a> for materials used / coded with <img title="LOVE!" src="!g/pix/heart-paper.gif" alt="love"> by <b>des</b> / on the web since <b>11.apr.23</b> / <a title="e-mail me!" href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">e-mail</a></p>
 			<a title="link to rosemary's free palestine page full of great resources on how to know and help the people of palestine" href="https://hillhouse.neocities.org/journal/notes/palestine" target="_blank"><img src="/collection/internet-graphics/!g/palestine.gif" alt="free palestine button"></a>
 			<img src="/collection/internet-graphics/!g/notforchildren.jpg" alt="not intended for children">
 			<img src="/collection/internet-graphics/!g/transrights.png" alt="trans rights now!">
