--- a/doqmeat/info/credit.html
+++ b/doqmeat/info/credit.html
@@ -8,13 +8,13 @@
 	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/notebook/body.css" rel="stylesheet" type="text/css" media="all">
-	<link href="link.css" rel="stylesheet" type="text/css" media="all">
+	<link href="/notebook/css/pink.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
 
-	<div id="wrapper">
-		<p class="hide"><small><a href="/" target="_parent">home</a> &gt; <a href="/notebook" target="_parent">notebook</a> &gt; links &gt;</small></p>
+	<main>
+		<p class="hide"><small><a href="/" target="_parent">home</a></small></p>
 
 		<h1>credit</h1>
 		<h2>sites that have inspired me!</h2>
@@ -88,7 +88,7 @@
 		<li><a href="/notebook/links/fonts.html">fonts</a> used in this page are: typo garden, gaegu, spirit, morningtea, nintendo ds bios, simple</li>
 		<li>body background by <a href="https://unsplash.com/photos/grass-field-at-daytime-PEm_sLmJT-w" target="_blank">Rodion Kutsaiev</a> from unsplash</li>
 
-	</div>
+	</main>
 </body>
 
 </html>
