--- a/doqmeat/notebook/index.html
+++ b/doqmeat/notebook/index.html
@@ -27,10 +27,10 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 	<div id="wrapper-index">
 
 		<div class="tab">
-			<button class="tablinks link-b" onclick="openTab('link-wrapper')">links</button>
-			<button class="tablinks site-b" onclick="openTab('site-wrapper')">sitely</button>
-			<button class="tablinks archive-b" onclick="openTab('archive-wrapper')">archives</button>
-			<button class="tablinks F2U-b" onclick="openTab('F2U-wrapper')">F2U</button>
+			<button class="tablinks link-b" onclick="openTab('link-wrapper')">resources</button>
+			<button class="tablinks site-b" onclick="openTab('site-wrapper')">graphics</button>
+			<button class="tablinks archive-b" onclick="openTab('archive-wrapper')">codes</button>
+			<button class="tablinks F2U-b" onclick="openTab('F2U-wrapper')">materials</button>
 		</div>
 
 		<div class="tab2">
@@ -44,57 +44,73 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 				<div class="left-in">
 
 					<p>lots and lots of links. i save them all here!</p>
-					<li><a href="links/credit.html" target="iframe_a">site insp &amp; credit</a></li>
-					<li><a href="links/index.html" target="iframe_a">links</a></li>
+					<li><a href="resources/index.html#favs" target="iframe_a">personal favs</a></li>
 					<ul>
-						↳ <a href="links#favs" target="iframe_a">personal favs</a>
-						<br>
-						<ul><small>↳ <a href="links#resource-pages" target="iframe_a">more resource pages</a></small></ul>
-						<br>
-						↳ <a href="links#code" target="iframe_a">coding &amp; webdev</a>
-						<ul><small>
-								<a href="links#editor" target="iframe_a">code editors</a>,
-								<a href="links#hosting" target="iframe_a">hosting</a>,
-								<a href="links#git" target="iframe_a">git / github</a>,
-								<a href="links#code-misc" target="iframe_a">misc</a>,
-							</small></ul>
-						↳ <a href="links#coding-help" target="iframe_a">HTML, CSS, and JS</a>
-						<ul>
-							<small><a href="links#beginner" target="iframe_a">the basics (HTML and CSS focused)</a>, <a href="links#js" target="iframe_a">javascript</a>, <a href="links#css" target="iframe_a">css</a>, <a href="links#html" target="iframe_a">html</a>, <a href="links#layouts" target="iframe_a">html F2U templates</a>, <a href="links#sites" target="iframe_a">useful sites for webdev</a>,
-								<a href="links#tut" target="iframe_a">tutorials / guides</a>,
-								<a href="links#cool" target="iframe_a">cool stuff 4 your site</a>: <a href="links#guestbooks">guestbooks</a>, <a href="links#tools" target="iframe_a">tools</a>, <a href="links#calendar" target="iframe_a">calendars / clocks</a>, <a href="links#music" target="iframe_a">music</a>, <a href="links#rss" target="iframe_a">rss</a>,
-								<a href="links#help-misc" target="iframe_a">misc</a>, <a href="links#neat" target="iframe_a">neat pieces of code</a></small>
-						</ul>
-						<br>↳ <a href="links#img" target="iframe_a">graphics</a>
-						<ul><small>
-								<a href="links#img-F2U" target="iframe_a">sites w/ F2U materials</a>,
-								<a href="links#bgs" target="iframe_a">backgrounds</a>,
-								<a href="links#archives" target="iframe_a">archives / collections</a>,
-								<a href="links#tumblr" target="iframe_a">tumblr blogs and masterposts</a>
-							</small></ul>
-						<br>↳ <a href="links#font" target="iframe_a">fonts</a>
-						<br>↳ <a href="links#img-editing" target="iframe_a">image editing</a>
-						<br>↳ <a href="links#misc" target="iframe_a">misc resources</a>
-						<br>↳ <a href="links#fun" target="iframe_a">for fun</a>
-						<ul><small>
-								<a href="links#comm" target="iframe_a">communities</a>,
-								<a href="links#dragndrop" target="iframe_a">drag and drop web builders</a>,
-								<a href="links#emoticons" target="iframe_a">copy-paste sites</a>,
-								<a href="links#vid" target="iframe_a">videos</a>,
-								<a href="links#music-links" target="iframe_a">music</a>,
-								<a href="links#games" target="iframe_a">games</a>,
-								<a href="links#articles" target="iframe_a">articles</a>,
-								<a href="links#join" target="iframe_a">things to join</a>, <a href="links#pixel-cliques" target="iframe_a">pixel cliques</a>, <a href="links#webrings" target="iframe_a">webrings</a>,
-							</small></ul>
+						<li><a href="resources/index.html#resource-pages" target="iframe_a">other resource pages</a></li>
 					</ul>
-					<li><a href="links/fonts.html" target="iframe_a">font page</a></li>
-					<li><a href="/sites" class="outlink">button wall</a> for other websites!</li>
+					<li><a href="resources/index.html#code" target="iframe_a">coding &amp; webdev</a></li>
+					<ul>
+						<li><a href="resources/index.html#editor" target="iframe_a">code editors</a></li>
+						<li><a href="resources/index.html#hosting" target="iframe_a">hosting</a></li>
+						<li><a href="resources/index.html#git" target="iframe_a">git / github</a></li>
+						<li><a href="resources/index.html#code-misc" target="iframe_a">misc</a></li>
+					</ul>
+					<li><a href="resources/index.html#coding-help" target="iframe_a">HTML, CSS, and JS</a></li>
+					<ul>
+						<li><a href="resources/index.html#beginner" target="iframe_a">the basics (HTML and CSS focused)</a></li>
+						<li><a href="resources/index.html#js" target="iframe_a">javascript</a></li>
+						<li><a href="resources/index.html#css" target="iframe_a">css</a></li>
+						<li><a href="resources/index.html#html" target="iframe_a">html</a></li>
+						<ul>
+							<li><a href="resources/index.html#layouts" target="iframe_a">html F2U templates</a></li>
+						</ul>
+					</ul>
+					<li><a href="resources/index.html#sites" target="iframe_a">useful sites for webdev</a></li>
+					<li><a href="resources/index.html#tut" target="iframe_a">tutorials / guides</a></li>
+					<li><a href="resources/index.html#cool" target="iframe_a">cool stuff 4 your site</a></li>
+					<ul>
+						<li><a href="resources/index.html#guestbooks">guestbooks</a></li>
+						<li><a href="resources/index.html#tools" target="iframe_a">tools</a></li>
+						<li><a href="resources/index.html#calendar" target="iframe_a">calendars / clocks</a></li>
+						<li><a href="resources/index.html#music" target="iframe_a">music</a></li>
+						<li><a href="resources/index.html#rss" target="iframe_a">rss</a></li>
+						<li><a href="resources/index.html#help-misc" target="iframe_a">misc</a></li>
+					</ul>
+					<li><a href="resources/index.html#neat" target="iframe_a">neat pieces of code</a></li>
+					<li><a href="resources/index.html#img" target="iframe_a">graphics</a></li>
+					<ul>
+						<li><a href="resources/index.html#img-F2U" target="iframe_a">sites w/ F2U materials</a></li>
+						<li><a href="resources/index.html#bgs" target="iframe_a">backgrounds</a></li>
+						<li><a href="resources/index.html#archives" target="iframe_a">archives / collections</a></li>
+						<li><a href="resources/index.html#tumblr" target="iframe_a">tumblr blogs and masterposts</a></li>
+					</ul>
+					<li><a href="resources/index.html#font" target="iframe_a">fonts</a></li>
+					<ul>
+						<li><a href="resources/fonts.html" target="iframe_a">font page</a></li>
+					</ul>
+					<li><a href="resources/index.html#img-editing" target="iframe_a">image editing</a></li>
+					<li><a href="resources/index.html#misc" target="iframe_a">misc resources</a></li>
+					<li><a href="resources/index.html#fun" target="iframe_a">for fun</a></li>
+					<ul>
+						<li><a href="resources/index.html#comm" target="iframe_a">communities</a></li>
+						<li><a href="resources/index.html#dragndrop" target="iframe_a">drag and drop web builders</a></li>
+						<li><a href="resources/index.html#emoticons" target="iframe_a">copy-paste sites</a></li>
+						<li><a href="resources/index.html#vid" target="iframe_a">videos</a></li>
+						<li><a href="resources/index.html#music-links" target="iframe_a">music</a></li>
+						<li><a href="resources/index.html#games" target="iframe_a">games</a></li>
+						<li><a href="resources/index.html#articles" target="iframe_a">articles</a></li>
+						<li><a href="resources/index.html#join" target="iframe_a">things to join</a></li>
+						<ul>
+							<li><a href="resources/index.html#pixel-cliques" target="iframe_a">pixel cliques</a></li>
+							<li><a href="resources/index.html#webrings" target="iframe_a">webrings</a></li>
+						</ul>
+					</ul>
 					<!-- paper-left end div -->
 				</div>
 			</div>
 
 			<div class="link-p paper right">
-				<iframe src="links/credit.html" name="iframe_a" height="600px" width="488px" style="border:none"></iframe>
+				<iframe src="resources/index.html" name="iframe_a" height="600px" width="488px" style="border:none"></iframe>
 				<!-- paper right end div -->
 			</div>
 			<!-- 	link wrapper end div -->
@@ -104,34 +120,30 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 		<div id="site-wrapper" class="tabcontent">
 			<div class="site-p paper left">
 				<div class="left-in">
-					<p>this is the site related things tab</p>
-					<li><a href="sitely/info.html" target="iframe_b">site info</a></li>
-					<li><a href="sitely/tools.html" target="iframe_b">tools</a></li>
-					<li><a href="/sitemap.html" target="iframe_b">sitemap</a></li>
-					<li><a href="https://github.com/doqmeat/doqmeat.neocities.org/issues" class="outlink" target="_blank">to-do's</a> - <small>i've moved this to github issues since it's easier for me to keep track of and update!</small></li>
-					<li><a title="img heavy, might have to reload frame" href="sitely/graphics.html" target="iframe_b">graphics collection</a></li>
+					<p>graphics i've collected and saved</p>
+					<li><a title="img heavy, might have to reload frame" href="resources/graphics.html" target="iframe_b">graphics collection</a></li>
 					<ul>
-						↳ <a href="sitely/graphics.html#emo" target="iframe_b">emoticons</a>
-						<br>↳ <a href="sitely/graphics.html#pix" target="iframe_b">pixels</a>
+						↳ <a href="resources/graphics.html#emo" target="iframe_b">emoticons</a>
+						<br>↳ <a href="resources/graphics.html#pix" target="iframe_b">pixels</a>
 						<ul><small>
-								<a href="sitely/graphics.html#tiny" target="iframe_b">tiny</a>, <a href="sitely/graphics.html#fav" target="iframe_b">favicons</a>, <a href="sitely/graphics.html#big" target="iframe_b">big</a>
+								<a href="resources/graphics.html#tiny" target="iframe_b">tiny</a>, <a href="resources/graphics.html#fav" target="iframe_b">favicons</a>, <a href="resources/graphics.html#big" target="iframe_b">big</a>
 							</small></ul>
-						<br>↳ <a href="sitely/graphics.html#div" target="iframe_b">dividers</a>
-						<br>↳ <a href="sitely/graphics.html#stickers" target="iframe_b">stickers</a>
+						<br>↳ <a href="resources/graphics.html#div" target="iframe_b">dividers</a>
+						<br>↳ <a href="resources/graphics.html#stickers" target="iframe_b">stickers</a>
 						<ul><small>
-								<a href="sitely/graphics.html#cats" target="iframe_b">cats</a>,
-								<a href="sitely/graphics.html#music" target="iframe_b">music</a>,
-								<a href="sitely/graphics.html#heart" target="iframe_b">hearts</a>,
-								<a href="sitely/graphics.html#stationary" target="iframe_b">stationary</a>,
-								<a href="sitely/graphics.html#nat" target="iframe_b">nature</a>,
-								<a href="sitely/graphics.html#text" target="iframe_b">with text</a>,
-								<a href="sitely/graphics.html#other-stickers" target="iframe_b">other</a>,
-								<a href="sitely/graphics.html#hw" target="iframe_b">halloween</a>,
-								<a href="sitely/graphics.html#long" target="iframe_b">long</a>,
-								<a href="sitely/graphics.html#vgs" target="iframe_b">video games</a>
+								<a href="resources/graphics.html#cats" target="iframe_b">cats</a>,
+								<a href="resources/graphics.html#music" target="iframe_b">music</a>,
+								<a href="resources/graphics.html#heart" target="iframe_b">hearts</a>,
+								<a href="resources/graphics.html#stationary" target="iframe_b">stationary</a>,
+								<a href="resources/graphics.html#nat" target="iframe_b">nature</a>,
+								<a href="resources/graphics.html#text" target="iframe_b">with text</a>,
+								<a href="resources/graphics.html#other-stickers" target="iframe_b">other</a>,
+								<a href="resources/graphics.html#hw" target="iframe_b">halloween</a>,
+								<a href="resources/graphics.html#long" target="iframe_b">long</a>,
+								<a href="resources/graphics.html#vgs" target="iframe_b">video games</a>
 							</small></ul>
-						<br>↳ <a href="sitely/graphics.html#gif" target="iframe_b">gifs</a>
-						<br>↳ <a href="sitely/graphics.html#frames" target="iframe_b">frames</a>
+						<br>↳ <a href="resources/graphics.html#gif" target="iframe_b">gifs</a>
+						<br>↳ <a href="resources/graphics.html#frames" target="iframe_b">frames</a>
 					</ul>
 
 					<!-- 		paper left end div -->
@@ -139,7 +151,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 			</div>
 
 			<div class="site-p paper right">
-				<iframe src="/sitemap.html" name="iframe_b" height="600px" width="489px" style="border:none"></iframe>
+				<iframe src="resources/graphics.html" name="iframe_b" height="600px" width="489px" style="border:none"></iframe>
 			</div>
 			<!-- 	site wrapper end div -->
 		</div>
@@ -148,22 +160,20 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 		<div id="archive-wrapper" class="tabcontent">
 			<div class="archive-p paper left">
 				<div class="left-in">
-					<p>the archives. its dusty in here. </p>
-					<p><mark>some links within these pages might be broken!</mark></p>
-					<li><a href="archive/homepage/index.html" target="iframe_c">past homepages</a></li>
+					<p>free to use templates and code snippets.</p>
+					<p>credit is not necessary but a link back is appreciated!</p>
 					<ul>
-						↳ <a href="archive/homepage/index.html#v1" target="iframe_c">v1</a> ↳ <a href="archive/homepage/index.html#v2" target="iframe_c">v2</a> ↳ <a href="archive/homepage/index.html#v3" target="iframe_c">v3</a> ↳ <a href="archive/homepage/index.html#v4" target="iframe_c">v4</a>
+						<li><a href="F2U/codes.html#walkman" target="iframe_c">JS sony walkman mp3 player</a> <img src="/!g/pix/new1.gif"></li>
+						<li><a href="F2U/codes.html#yukika" target="iframe_c">yukika passport</a></li>
+						<li><a href="F2U/codes.html#notebook" target="iframe_c">notebook</a></li>
 					</ul>
-					<li><a href="archive/layouts/index.html" target="iframe_c">page layouts</a></li>
-					<li><a href="archive/updates.html" target="iframe_c">past updates</a></li>
-					<li><a href="archive/pages/index.html" target="iframe_c">archived pages</a></li>
 
 					<!-- 		paper left end div -->
 				</div>
 			</div>
 
 			<div class="archive-p paper right">
-				<iframe src="archive/homepage/index.html" name="iframe_c" height="600px" width="489px" style="border:none"></iframe>
+				<iframe src="F2U/codes.html" name="iframe_c" height="600px" width="489px" style="border:none"></iframe>
 
 				<!-- 	paper right end div -->
 			</div>
@@ -174,17 +184,8 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 		<div id="F2U-wrapper" class="tabcontent">
 			<div class="F2U-p paper left">
 				<div class="left-in">
-					<p>things i make that is free to use! hoping to add more stuff here in the future!</p>
 					<p>credit is not necessary but a link back is appreciated!</p>
-					<p>note: please <mark>do not <a class="outlink" href="https://www.hostinger.com/tutorials/hotlinking" target="_blank">hotlink</a>!</mark> download them and save them to your own server. i change things around frequently too so it might break lol</p>
-					<li><a href="F2U/codes.html" target="iframe_d">templates</a></li>
-					<ul>
-						↳ <a href="F2U/codes.html#walkman" target="iframe_d">JS sony walkman mp3 player</a> <img src="/!g/pix/new1.gif">
-						<br>
-						↳ <a href="F2U/codes.html#yukika" target="iframe_d">yukika passport</a>
-						<br>
-						↳ <a href="F2U/codes.html#notebook" target="iframe_d">notebook</a>
-					</ul>
+					<p>note: please <mark>do not <a class="outlink" href="https://www.hostinger.com/tutorials/hotlinking" target="_blank">hotlink</a>!</mark> download them and save them to your own server. i change things around frequently too so it might break lol.</p>
 					<li><a href="F2U/materials.html" target="iframe_d">site materials</a></li>
 					<ul>
 						↳ <a href="F2U/materials.html#bgs" target="iframe_d">backgrounds</a>
@@ -202,7 +203,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 			</div>
 
 			<div class="F2U-p paper right">
-				<iframe src="F2U/codes.html" name="iframe_d" height="600px" width="489px" style="border:none"></iframe>
+				<iframe src="F2U/materials.html" name="iframe_d" height="600px" width="489px" style="border:none"></iframe>
 
 				<!-- 	paper right end div -->
 			</div>
@@ -211,7 +212,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 
 		<!-- 	tut wrapper -->
 		<div id="tut-wrapper" class="tabcontent">
-			<div class="F2U-p paper left">
+			<div class="site-p paper left">
 				<div class="left-in">
 					<p>website related tutorials and guides i make!</p>
 					<ul>
@@ -222,7 +223,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 				</div>
 			</div>
 
-			<div class="F2U-p paper right">
+			<div class="site-p paper right">
 				<iframe src="tutorials/rss/index.html" name="tut" height="600px" width="489px" style="border:none"></iframe>
 
 				<!-- 	paper right end div -->
@@ -234,11 +235,11 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 		<div id="info-wrapper" class="tabcontent">
 			<div class="info-p paper left">
 				<div class="left-in">
-					<h1>des' notebook</h1>
+					<h1>des' resources</h1>
 					<div id="sticky" class="draggable">
 						<br><br>welcome to my little resource notebook! :3<br><img src="/!g/deco/bunnyzzz.gif">
 					</div>
-					<p>in this notebook i store any helpful <small>(and fun, we can't for get to have fun every once in a while)</small> links that i've stumbled upon, an archive of various doqmeat.com pages, site info, and host my F2U stuff!</p>
+					<p>in this notebook you'll find many helpful <small>(and fun)</small> links that have helped me throughout my journey of making this site, and host my F2U stuff such as templates, site materials, and more.</p>
 					<p>last updated on: <b>22.feb.25</b></p>
 					<p><a href="/">go to homepage</a></p>
 
