--- a/doqmeat/notebook/resources/graphics.html
+++ b/doqmeat/notebook/resources/graphics.html
@@ -4,11 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>graphics</title>
+	<title>graphics collection</title>
 	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<link href="site.css" rel="stylesheet" type="text/css" media="all">
-	<link href="/notebook/body.css" rel="stylesheet" type="text/css" media="all">
+	<link href="../css/blue.css" rel="stylesheet" type="text/css" media="all">
+	<link href="../body.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
@@ -47,11 +47,9 @@
 	<div id="wrapper">
 		<p class="hide" style="text-align:left;"><small><a href="/" target="_parent">home</a> &gt; <a href="/notebook" target="_parent">notebook</a> &gt; sitely</small></p>
 
-		<h1>graphics</h1>
+		<h1>graphics collection</h1>
 
-		<p>img heavy! might have to reload the page so all imgs to load</p>
-
-		<p>i have all of these here so its easier for me to look them up to use on my pages! <br> feel free to take any of these for your own site as well but please 1) visit the creator's page and read their rules (if there's credit linked) 2) and do not <u>hotlink</u>! <mark>save to your own server/site</mark></p>
+		<p>please visit the creator's page and read their rules (if there's credit linked) if you will be using any of these as well.</p>
 		<p>credit for these will be linked on the img if i know of it. i'm currently in the process of reverse img searching sources. <b>if you know the source of an img, or are the original creator of any of these and want it deleted: please</b> <a href="tomail:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">let me know!</a></p>
 
 		<h2 id="emo">emoticons</h2>
@@ -98,7 +96,7 @@
 		<img src="/!g/pix/black-cat.gif">
 		<img src="/!g/pix/mizu2.gif">
 		<img src="/!g/pix/2ofem.gif">
-		<img src="/!g/pix/heart-cat1">
+		<img src="/!g/pix/heart-cat1.gif">
 		<img src="/!g/deco/catlaying.gif">
 		<img src="/!g/pix/bluecat.gif">
 		<img src="/!g/pix/cat-ghost.gif">
@@ -114,7 +112,7 @@
 		<img src="/!g/pix/hi-cat.gif">
 		<img src="/!g/pix/gaycat.gif">
 		<img src="/!g/pix/kiss-cat2.gif">
-		<img src="/!g/pix/annoyed-cat">
+		<img src="/!g/pix/annoyed-cat.gif">
 
 
 
