--- a/doqmeat/notebook/resources/index.html
+++ b/doqmeat/notebook/resources/index.html
@@ -7,8 +7,8 @@
 	<title>links</title>
 	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<link href="/notebook/body.css" rel="stylesheet" type="text/css" media="all">
-	<link href="link.css" rel="stylesheet" type="text/css" media="all">
+	<link href="../body.css" rel="stylesheet" type="text/css" media="all">
+	<link href="../css/pink.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
@@ -266,6 +266,7 @@
 		<hr>
 
 		<h2 id="img">graphics</h2>
+		<p>my <a href="graphics.html" target="_blank">graphic collection</a> page</p>
 
 		<h3 id="img-F2U">sites with F2U materials</h3>
 
