--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -6,7 +6,7 @@
 	<title>sitemap</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all" />
-	<link href="/notebook/sitely/site.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="/notebook/css/blue.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="/notebook/body.css" rel="stylesheet" type="text/css" media="all" />
 	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif" />
 	<!-- tooltip shit -->
@@ -32,6 +32,7 @@
 		</center>
 		<li><a href="/" target="_parent">homepage</a></li>
 		<li><a href="rss.xml" target="_parent">RSS feed</a></li>
+		<li><a href="sitemap.html" target="_blank">sitemap</a></li>
 		<ul>
 			<li><a href="/about/index.html" target="_parent">about</a></li>
 			<li><a href="/photobook/index.html" target="_parent">photobook</a></li>
@@ -110,9 +111,6 @@
 				<br>
 				↳
 				<a href="/reading/index.html" target="_parent">books</a>
-				<br />
-				↳
-				<a href="/music/listening-log" target="_parent">music</a>
 			</ul>
 			<li><a href="/learning">learning in public</a></li>
 			<ul>
@@ -125,46 +123,15 @@
 				↳
 				<a href="/learning/python/index.html" target="_parent">learning python</a>
 			</ul>
-			<li><a href="https://doqmeat.atabook.org/" target="_blank" class="outlink">guestbook</a></li>
+			<li><a href="/notebook" target="_parent">des' resources</a></li>
 			<ul>
-				<li><a href="/guestbook/archive1.html">archived 123guestbook</a></li>
-				<li><a href="/guestbook/archive2.html">archived google sheets guestbook</a></li>
+				<li><a href="/notebook/resources/index.html" target="_parent">links</a></li>
+				<li><a href="/notebook/resources/graphics.html" target="_parent">graphic collection</a></li>
+				<li><a href="/notebook/resources/fonts.html" target="_parent">fonts</a></li>
 			</ul>
-			<li><a href="/notebook" target="_parent">notebook</a></li>
 			<ul>
-				<li><b>links</b></li>
-				<ul>
-
-					↳
-					<a href="/sites/index.html" target="_parent">button wall</a>
-					<br />
-					↳
-					<a href="/notebook/links/index.html" target="_parent">links &amp; resources</a>
-					<br />
-					↳
-					<a href="/notebook/links/credit.html" target="_parent">credit &amp; inspiration</a>
-					<br />
-					↳
-					<a href="/notebook/links/fonts.html" target="_parent">fonts</a>
-				</ul>
-				<li><b>sitely</b></li>
-				<ul>
-					↳
-					<a href="/notebook/sitely/graphics.html" target="_parent">sitemap</a>
-					(you're here!)
-					<br />
-					↳
-					<a href="/notebook/sitely/tools.html" target="_parent">tools</a>
-					<br />
-					↳
-					<a href="/notebook/sitely/info.html" target="_parent">site info</a>
-					<br />
-					↳
-					<a href="/notebook/sitely/graphics.html" target="_parent">graphics</a>
-				</ul>
 				<li><b>F2U</b></li>
-				<ul>
-					↳
+				<ul> ↳
 					<a href="/notebook/F2U/stamps.html" target="_parent">stamps</a>
 					<br />
 					↳
@@ -181,22 +148,17 @@
 					↳
 					<a href="/notebook/tutorials/rss/index.html" target="_parent">RSS feed</a>
 				</ul>
-				<li><b>archives</b></li>
-				<ul>
-					↳
-					<a href="/notebook/archive/updates.html" target="_parent">updates</a>
-					<br />
-					↳
-					<a href="/notebook/archive/homepage/index.html" target="_parent">homepage layouts</a>
-					<br />
-					↳
-					<a href="/notebook/archive/layouts/index.html" target="_parent">page layouts</a>
-					<br />
-					↳
-					<a href="/notebook/archive/pages/index.html" target="_parent">archived pages</a>
-				</ul>
 			</ul>
-			<li><b>misc</b></li>
+			<li><b>info</b> (WIP!)</li>
+			<ul>
+				<li><a href="/info/credit.html" target="_parent">credit &amp; insp</a></li>
+			</ul>
+			<li><a href="https://doqmeat.atabook.org/" target="_blank" class="outlink">guestbook</a></li>
+			<ul>
+				<li><a href="/guestbook/archive1.html">archived 123guestbook</a></li>
+				<li><a href="/guestbook/archive2.html">archived google sheets guestbook</a></li>
+			</ul>
+			<li><b>misc / archived</b></li>
 			<ul>
 				<li><a href="/safe-spot/index.html" target="_parent">safe spot</a></li>
 				<li><a href="/webgarden/greenhouse.html" target="_parent">webgarden greenhouse</a></li>
