--- a/doqmeat/notebook/F2U/codes.html
+++ b/doqmeat/notebook/F2U/codes.html
@@ -6,8 +6,8 @@
 	<title>templates</title>
 	<link rel="icon" type="image/x-icon" href="../favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<link href="/notebook/body.css" rel="stylesheet" type="text/css" media="all">
-	<link href="F2U.css" rel="stylesheet" type="text/css" media="all">
+	<link href="../body.css" rel="stylesheet" type="text/css" media="all">
+	<link href="../css/green.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
