--- a/doqmeat/notebook/F2U/stamps.html
+++ b/doqmeat/notebook/F2U/stamps.html
@@ -7,7 +7,7 @@
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/notebook/body.css" rel="stylesheet" type="text/css" media="all">
-	<link href="F2U.css" rel="stylesheet" type="text/css" media="all">
+	<link href="../css/yellow.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
