--- a/doqmeat/notebook/resources/fonts.html
+++ b/doqmeat/notebook/resources/fonts.html
@@ -7,8 +7,8 @@
 	<title>fonts</title>
 	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<link href="/notebook/body.css" rel="stylesheet" type="text/css" media="all">
-	<link href="link.css" rel="stylesheet" type="text/css" media="all">
+	<link href="../body.css" rel="stylesheet" type="text/css" media="all">
+	<link href="../css/pink.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
