--- a/doqmeat/notebook/tutorials/rss/index.html
+++ b/doqmeat/notebook/tutorials/rss/index.html
@@ -4,11 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>RSS guide</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="../../body.css" rel="stylesheet" type="text/css" media="all">
-	<link href="../tut.css" rel="stylesheet" type="text/css" media="all">
+	<link href="../../css/blue.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
@@ -59,7 +59,6 @@
 		nav a {
 			display: block;
 		}
-
 	</style>
 </head>
 
@@ -134,7 +133,7 @@
 		<hr>
 		<p><u>note 1</u>: the date of each <code>item</code> is the <code>pubDate</code> aka <i>published date</i>. it has to be formatted as shown in the code or you will get an error. the time of the <code>item</code> <code>pubDate</code> is configured using your timezone. you'll have to check your time zone in order to put the correct value! my time zone is GMT -4 which why you see a <code>-0400</code> in there.</p>
 		<blockquote>example: if you're in eastern standard time, then you can just input <code>Tue, 09 Jul 2024 15:00:00 EST</code> in the <code>pubDate</code>.</blockquote>
-<p><u>edit 1</u>: you can also use this <a href="https://timestampgenerator.com/" target="_blank" class="outlink">time stamp generator</a> to generate your <code>pubDate</code>, just make sure to copy paste the one that says <i>RFC</i></p>
+		<p><u>edit 1</u>: you can also use this <a href="https://timestampgenerator.com/" target="_blank" class="outlink">time stamp generator</a> to generate your <code>pubDate</code>, just make sure to copy paste the one that says <i>RFC</i></p>
 		<hr>
 		<p><u>note 2</u>: you can display HTML code in your <code>rss.xml</code> but not the way you are probably thinking of.</p>
 		<p>for example: let's say you want to include a link in the <code>description</code> of an <code>item</code>. instead of writing <code>&lt;a href=&quot;URL&quot;&gt;LINK&lt;/a&gt;</code> you instead have to do it with <a href="https://www.w3schools.com/html/html_symbols.asp" target="_blank" class="outlink">HTML entities</a>, like so:</p>
