--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -242,6 +242,7 @@
 			<img src="!g/vocaloid-now.gif" alt="vocaloid now">
 			<img src="!g/cinna.gif">
 			<a herf="https://rainy.gay/other/buttons"><img src="!g/void.png"></a>
+			<img src="!g/dithering.gif" alt="dithering now!">
 			<img src="!g/bestviewed.gif">
 			<img src="!g/glue.jpeg">
 			<img src="!g/bestvwmonitor.gif">
@@ -294,7 +295,7 @@
 	</div>
 
 	<footer>
-		<p>last updated on: <b>22.jun.25</b></p>
+		<p>last updated on: <b>10.jul.25</b></p>
 		<p>page built with materials by <a href="https://foollovers.com/" target="_blank">foollovers</a> and bg by <a href="http://sozaiya405.chu.jp/" target="_blank">sozaiya 405</a></p>
 		<a href="/collection">collection</a> / <a href="/">home</a> / <a href="/sitemap">sitemap</a>
 	</footer>
