--- a/doqmeat/learning/javascript/index.html
+++ b/doqmeat/learning/javascript/index.html
@@ -32,6 +32,7 @@
 			</ul>
 			<h3>links</h3>
 			<ul>
+				<li><a href="https://javascript.info" target="_blank">javascript.info</a></li>
 				<li><a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript" class="outlink" target="_blank">mozilla's learn JS</a></li>
 			</ul>
 		</nav>
